🔧 chore(vcs.xml): add Git as version control system and project directory mapping 🎨 style(index.html): add background overlay and new content to the page 🎨 style(style.css): add styling to the new content and background overlay

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
 </head>
 <body>
     <div id="headerMenu">
-        <h1>sdad</h1>
+        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
+    </div>
+    <div id="inFrontOfBg">
+        <div id="opacityOverlay">
+            <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
+            <button id="checkOutNewReview">Check out our new review!</button>
+        </div>
+
+    </div>
+
+    <div id="solidInFrontOfBg">
+        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
     </div>
 </body>
 </html>
