--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 </head>
 <body>
     <div id="headerMenu">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
+        <img id="headerIcon" src="icon.jpg">
+        <button id="headerHome">Home</button>
+        <button id="headerGames">Games</button>
+        <button id="headerContacts">Contacts</button>
+        <button id="headerRegister">Log In</button>
+        <button id="headerLogin">Register</button>
     </div>
     <div id="inFrontOfBg">
         <div id="opacityOverlay">
-            <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
+            <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
             <button id="checkOutNewReview">Check out our new review!</button>
         </div>
 
