🎨 style(index.html): add script.js file to the head section 🚀 feat(index.html): add onclick event to the Games button to expand the dropdown menu ✨ feat(script.js): add expandDropDownMenu function to log a message to the console when the Games button is clicked

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Recenzje Gier Video</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="headerMenu">
         <img id="headerIcon" src="icon.jpg">
         <button id="headerHome">Home</button>
-        <button id="headerGames">Games</button>
+        <button id="headerGames" onclick="expandDropDownMenu()">Games</button>
         <button id="headerContacts">Contacts</button>
         <button id="headerRegister">Log In</button>
         <button id="headerLogin">Register</button>
