🎨 style(index.html): refactor headerGames button to dropdown menu 🆕 feat(reviewpage.html): add new review page The headerGames button has been refactored to a dropdown menu to improve the user experience. The dropdown menu contains links to review pages for specific games. A new review page has been added to the project, which will be used to display reviews for specific games.
🔨 refactor(script.js): remove unused function and add missing semicolons
🚀 feat(script.js): add functions to set game name and review text based on selected game
The expandDropDownMenu function was removed as it was unused. Semicolons were added to the end of each statement for consistency and to avoid any potential issues. Two new functions were added, setGameName and setReviewTextBasedOnSelectedGame, which set the game name and review text based on the selected game.

🎨 style(strona2.html): reformat code for readability
The code in strona2.html was reformatted for readability.

🎨 style(css): update header styles and add dropdown menu
This commit updates the header styles by removing the background color of the headerGames and headerContacts elements. It also adds a dropdown menu to the headerGames element. The dropdown menu is hidden by default and is displayed when the user hovers over the headerGames element. The dropdown menu has a white background color and black text color. When the user hovers over the dropdown menu items, the background color changes to #ddd.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <title>Recenzje Gier Video</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
+<!--    <script src="script.js"></script>-->
 </head>
 <body>
     <div id="headerMenu">
         <img id="headerIcon" src="icon.jpg">
         <button id="headerHome">Home</button>
-        <button id="headerGames" onclick="expandDropDownMenu()">Games</button>
+        <div class="dropdown">
+            <button id="headerGames">Games</button>
+            <div class="dropdown-content">
+                <a href="reviewpage.html" onclick="setGameName('Minecraft Update 1.20')">Minecraft Update 1.20</a>
+                <a href="#" onclick="setGameName('The Last Of Us Part I')">The Last Of Us Part I</a>
+                <a href="#" onclick="setGameName('Hogwarts Legacy')">Hogwarts Legacy</a>
+            </div>
+        </div>
+
         <button id="headerContacts">Contacts</button>
         <button id="headerRegister">Log In</button>
         <button id="headerLogin">Register</button>
