--- a/index.html
+++ b/index.html
@@ -3,36 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Recenzje Gier Video</title>
+    <link rel="icon" href="icon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
 <!--    <script src="script.js"></script>-->
 </head>
 <body>
     <div id="headerMenu">
-        <img id="headerIcon" src="icon.jpg">
-        <button id="headerHome">Home</button>
+        <img id="headerIcon" src="icon.png" onclick="location.href='index.html'">
+        <button id="headerHome" onclick="location.href='index.html'">Home</button>
         <div class="dropdown">
             <button id="headerGames">Games</button>
             <div class="dropdown-content">
-                <a href="reviewpage.html" onclick="setGameName('Minecraft Update 1.20')">Minecraft Update 1.20</a>
-                <a href="#" onclick="setGameName('The Last Of Us Part I')">The Last Of Us Part I</a>
-                <a href="#" onclick="setGameName('Hogwarts Legacy')">Hogwarts Legacy</a>
+                <a href="reviewpage.html?data=mc_1.20">Minecraft Update 1.20</a>
+                <a href="reviewpage.html?data=tloup1">The Last Of Us Part I</a>
+                <a href="reviewpage.html?data=hogwartslegacy">Hogwarts Legacy</a>
             </div>
         </div>
 
-        <button id="headerContacts">Contacts</button>
-        <button id="headerRegister">Log In</button>
-        <button id="headerLogin">Register</button>
+        <button id="headerContacts" onclick="location.href='contacts.html'">Contacts</button>
+        <button id="headerRegister" onclick="location.href='login.html?type=login'">Log In</button>
+        <button id="headerLogin" onclick="location.href='login.html?type=register'">Register</button>
     </div>
     <div id="inFrontOfBg">
         <div id="opacityOverlay">
-            <h1>(Cześć Siurku) Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-            <button id="checkOutNewReview">Check out our new review!</button>
+            <h1>Najlepsze recenzje gier w całym internecie!</h1>
+            <button id="checkOutNewReview" onclick="location.href='reviewpage.html?data=mc_1.20'">Sprawdź naszą najnowszą recenzję!</button>
         </div>
 
     </div>
 
     <div id="solidInFrontOfBg">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
+        <h1 id="gameTitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
     </div>
 </body>
 </html>
