--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <img id="headerIcon" src="icon.png" onclick="location.href='index.html'" alt="Nasze logo">
     <button id="headerHome" onclick="location.href='index.html'">Home</button>
     <div class="dropdown">
-        <button id="headerGames">Games</button>
+        <button id="headerGames">Gry</button>
         <div class="dropdown-content">
             <a href="reviewpage.html?data=mc_1.20">Minecraft Update 1.20</a>
             <a href="reviewpage.html?data=tloup1">The Last Of Us Part I</a>
@@ -19,22 +19,26 @@
         </div>
     </div>
 
-    <button id="headerContacts" onclick="location.href='contacts.html'">Contacts</button>
-    <button id="headerRegister" onclick="location.href='login.html?type=login'">Log In</button>
-    <button id="headerLogin" onclick="location.href='login.html?type=register'">Register</button>
+    <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
+    <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj Się</button>
+    <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj Się</button>
 </div>
 <div id="loginForm">
     <br>
-    <h1 id="loginTitle">Lorem ipsum dolor sit amet</h1>
+    <h1 id="loginTitle"></h1>
     <input type="text" placeholder="Adres Email" id="loginBox">
     <br>
     <br>
     <input type="password" placeholder="Hasło" id="passwordBox">
     <br>
     <br>
+    <input type="password" placeholder="Powtórz Hasło" id="repeatPasswordBox">
     <br>
-    <a href="login.html?type=register">Lorem ipsum dolor sit amet? Lorem ipsum dolor sit amet!</a>
-    <button id="loginConfirm">Lorem ipsum dolor sit amet</button>
+    <br>
+    <br>
+    <a href="login.html?type=register" id="doUWantToRegister"></a>
+    <br>
+    <button id="loginConfirm"></button>
     <br>
     <br>
     <p>‎ </p>
