not the big boy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 <!--    <script src="script.js"></script>-->
 </head>
-<body>
+<body onload="displayLoggedInAccount()">
     <div id="headerMenu">
         <img id="headerIcon" src="icon.png" onclick="location.href='index.html'">
         <button id="headerHome" onclick="location.href='index.html'">Home</button>
