fixed some bugs but there is still a fuck ton of these little bad boys of shit

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title>Recenzje Gier Video</title>
     <link rel="icon" href="icon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <!--    <script src="script.js"></script>-->
 </head>
 <body onload="displayLoggedInAccount()">
     <div id="headerMenu">
         <img id="headerIcon" src="icon.png" onclick="location.href='index.html'">
-        <button id="headerHome" onclick="location.href='index.html'">Home</button>
+<!--        <button id="headerHome" onclick="location.href='index.html'">Home</button>-->
         <div class="dropdown">
             <button id="headerGames">Games</button>
             <div class="dropdown-content">
@@ -29,7 +32,6 @@
             <h1>Najlepsze recenzje gier w całym internecie!</h1>
             <button id="checkOutNewReview" onclick="location.href='reviewpage.html?data=mc_1.20'">Sprawdź naszą najnowszą recenzję!</button>
         </div>
-
     </div>
 
     <div id="solidInFrontOfBg">
