--- a/login.html
+++ b/login.html
@@ -20,8 +20,8 @@
     </div>
 
     <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
-    <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj Się</button>
-    <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj Się</button>
+    <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj się</button>
+    <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
 </div>
 <div id="loginForm">
     <br>
