(start of) THE BIG ASS MOTHERFUCKING BOY!!!@@!!!111

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <!--    <script src="script.js"></script>-->
 </head>
-<body onload="displayLoggedInAccount()">
+<body onload="displayLoggedInAccountOnPageLoad()">
     <div id="headerMenu">
         <img id="headerIcon" src="icon.png" onclick="location.href='index.html'">
 <!--        <button id="headerHome" onclick="location.href='index.html'">Home</button>-->
