--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
     <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
     <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj się</button>
     <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
+    <button id="loggedUserInfo">Lorem ipsum dolor sit amet</button>
 </div>
 <div id="loginForm">
     <br>
@@ -38,7 +39,7 @@
     <br>
     <a href="login.html?type=register" id="doUWantToRegister"></a>
     <br>
-    <button id="loginConfirm"></button>
+    <button id="loginConfirm" onclick="displayLoggedInAccountAfterButtonClicked()"></button>
     <br>
     <br>
     <p>‎ </p>
