--- a/contacts.html
+++ b/contacts.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
 </head>
-<body>
-<div id="headerMenu">
-    <img id="headerIcon" src="icon.png" onclick="location.href='index.html'">
-    <button id="headerHome" onclick="location.href='index.html'">Home</button>
-    <div class="dropdown">
-        <button id="headerGames">Games</button>
-        <div class="dropdown-content">
-            <a href="reviewpage.html?data=mc_1.20">Minecraft Update 1.20</a>
-            <a href="reviewpage.html?data=tloup1">The Last Of Us Part I</a>
-            <a href="reviewpage.html?data=hogwartslegacy">Hogwarts Legacy</a>
+<body onload="displayLoggedInAccountOnPageLoad()">
+    <div id="headerMenu">
+        <img id="headerIcon" src="icon.png" onclick="location.href='index.html'" alt="Nasze logo">
+        <button id="headerHome" onclick="location.href='index.html'">Home</button>
+        <div class="dropdown">
+            <button id="headerGames">Gry</button>
+            <div class="dropdown-content">
+                <a href="reviewpage.html?data=mc_1.20" id="game1">Minecraft Update 1.20</a>
+                <a href="reviewpage.html?data=tloup1" id="game2">The Last Of Us Part I</a>
+                <a href="reviewpage.html?data=hogwartslegacy" id="game3">Hogwarts Legacy</a>
+            </div>
         </div>
-    </div>
 
-    <button id="headerContacts" onclick="location.href='contacts.html'">Contacts</button>
-    <button id="headerRegister" onclick="location.href='login.html?type=login'">Log In</button>
-    <button id="headerLogin" onclick="location.href='login.html?type=register'">Register</button>
-</div>
+        <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
+        <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj się</button>
+        <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
+        <button id="loggedUserInfo">Lorem ipsum dolor sit amet</button>
+    </div>
 </body>
 </html>
