--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<!--    <script src="script.js"></script>-->
+    <script src="script.js"></script>
 </head>
 <body onload="displayLoggedInAccountOnPageLoad()">
     <div id="headerMenu">
-        <img id="headerIcon" src="icon.png" onclick="location.href='index.html'">
-<!--        <button id="headerHome" onclick="location.href='index.html'">Home</button>-->
+        <img id="headerIcon" src="icon.png" onclick="location.href='index.html'" alt="Nasze logo">
+        <button id="headerHome" onclick="location.href='index.html'">Home</button>
         <div class="dropdown">
-            <button id="headerGames">Games</button>
+            <button id="headerGames">Gry</button>
             <div class="dropdown-content">
-                <a href="reviewpage.html?data=mc_1.20">Minecraft Update 1.20</a>
-                <a href="reviewpage.html?data=tloup1">The Last Of Us Part I</a>
-                <a href="reviewpage.html?data=hogwartslegacy">Hogwarts Legacy</a>
+                <a href="reviewpage.html?data=mc_1.20" id="game1">Minecraft Update 1.20</a>
+                <a href="reviewpage.html?data=tloup1" id="game2">The Last Of Us Part I</a>
+                <a href="reviewpage.html?data=hogwartslegacy" id="game3">Hogwarts Legacy</a>
             </div>
         </div>
 
-        <button id="headerContacts" onclick="location.href='contacts.html'">Contacts</button>
-        <button id="headerRegister" onclick="location.href='login.html?type=login'">Log In</button>
-        <button id="headerLogin" onclick="location.href='login.html?type=register'">Register</button>
+        <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
+        <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj się</button>
+        <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
+        <button id="loggedUserInfo">Lorem ipsum dolor sit amet</button>
     </div>
     <div id="inFrontOfBg">
         <div id="opacityOverlay">
@@ -35,7 +36,19 @@
     </div>
 
     <div id="solidInFrontOfBg">
-        <h1 id="gameTitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
+        <div id="pageMap">
+            <br>
+            <br>
+            <br>
+            <a href="login.html?type=register" id="mapLink1">Zarejestruj się</a>
+            <a href="login.html?type=login" id="mapLink2">Zaloguj się</a>
+            <a href="reviewpage.html?data=mc_1.20" id="mapLink3">Recenzja Gry Minecraft</a>
+            <a href="reviewpage.html?data=tloup1" id="mapLink4">Recenzja gdy The Last Of Us Part I</a>
+            <a href="reviewpage.html?data=hogwartslegacy" id="mapLink5">Recenzja Gry Hogwarts Legacy</a>
+            <a href="contacts.html" id="mapLink6">Kontakt</a>
+        </div>
+        <h1>Copyright Vekto Industries©</h1>
+        <h3>2023</h3>
     </div>
 </body>
 </html>
