i fucking hate working on reviewpage.html it makes me wanna puke
reviewpage.html is like a bomb covered in horse shit with cat piss poured all over it. it sucks so fucking much that i can't explain it. i think that the most accurate description would be taking a shit into your bath and making it EXPLODE on EVERY SINGLE WALL!!!

in conclusion,
I FUCKING HATE reviewpage.html!12121!!!@#

--- a/reviewpage.html
+++ b/reviewpage.html
@@ -30,7 +30,18 @@
         <p id="reviewText">
             <strong>W obliczu wydania wersji 1.19 Minecrafta fani ponownie zabrali głos. Krytyka The Wild Update nie skupia się na samej zawartości; pod ostrzałem jest komunikacja z deweloperami.</strong>
             <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             Wczoraj do Minecrafta oficjalnie trafił The Wild Update. Wielokrotnie pisaliśmy o tym, jak bardzo jego zawartość nie zadowoliła graczy, choć jak się okazało, wina nie do końca leży w samej aktualizacji. Społeczność wini komunikację z deweloperem, a właściwie jej brak.
+            <br>
+            <br>
+            Gracze zaakceptowali to, że The Wild Update nie będzie przełomowy pod względem zawartości. Mimo wszystko część z komentujących opis aktualizacji jest zadowolona, że kolejna wersja Minecrafta w końcu wylądowała. Choć nadal trzeba pamiętać, że Minecraftowi w edycji 1.19 wciąż daleko do perfekcji.
+
         </p>
         <br>
         <p>‎ </p>
