--- a/contacts.html
+++ b/contacts.html
@@ -22,7 +22,7 @@
         <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
         <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj się</button>
         <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
-        <button id="loggedUserInfo">Lorem ipsum dolor sit amet</button>
+        <button id="loggedUserInfo">Lorem ipsum aisldjsalkjdlksajd</button>
     </div>
 </body>
 </html>
