--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recenzje Gier Video</title>
+    <title>Vekto's Game Reviews - Recenzje Gier Video</title>
     <link rel="icon" href="icon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
         <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
         <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj się</button>
         <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
-        <button id="loggedUserInfo">Lorem ipsum dolor sit amet</button>
+        <button id="loggedUserInfo">Lorem ipsum aisldjsalkjdlksajd</button>
     </div>
     <div id="inFrontOfBg">
         <div id="opacityOverlay">
