--- a/login.html
+++ b/login.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Vekto's Game Reviews</title>
+    <link rel="icon" href="icon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
 </head>
@@ -22,7 +23,7 @@
         <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
         <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj się</button>
         <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
-        <button id="loggedUserInfo">Lorem ipsum dolor sit amet</button>
+        <button id="loggedUserInfo">Lorem ipsum aisldjsalkjdlksajd</button>
     </div>
 <div id="loginForm">
     <br>
