--- a/reviewpage.html
+++ b/reviewpage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Coś poszło nie tak - Nie udało się załadować tytułu strony</title>
+    <link rel="icon" href="icon.png">
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -22,27 +23,12 @@
         <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
         <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj się</button>
         <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
-        <button id="loggedUserInfo">Lorem ipsum dolor sit amet</button>
+        <button id="loggedUserInfo">Lorem ipsum aisldjsalkjdlksajd</button>
     </div>
     <div id="reviewPane">
-        <h1 id="gameReviewTitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
-        <img src="icon.jpg" alt="Zdjęcie Gry" id="gameImage">
-        <p id="reviewText">
-            <strong>W obliczu wydania wersji 1.19 Minecrafta fani ponownie zabrali głos. Krytyka The Wild Update nie skupia się na samej zawartości; pod ostrzałem jest komunikacja z deweloperami.</strong>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            Wczoraj do Minecrafta oficjalnie trafił The Wild Update. Wielokrotnie pisaliśmy o tym, jak bardzo jego zawartość nie zadowoliła graczy, choć jak się okazało, wina nie do końca leży w samej aktualizacji. Społeczność wini komunikację z deweloperem, a właściwie jej brak.
-            <br>
-            <br>
-            Gracze zaakceptowali to, że The Wild Update nie będzie przełomowy pod względem zawartości. Mimo wszystko część z komentujących opis aktualizacji jest zadowolona, że kolejna wersja Minecrafta w końcu wylądowała. Choć nadal trzeba pamiętać, że Minecraftowi w edycji 1.19 wciąż daleko do perfekcji.
-
-        </p>
+        <h1 id="gameReviewTitle"></h1>
+        <img src="" alt="Zdjęcie Gry" id="gameImage">
+        <p id="reviewText"></p>
         <br>
         <p>‎ </p>
     </div>
