--- a/login.html
+++ b/login.html
@@ -7,40 +7,38 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
 </head>
-<body onload="setLoginOrRegisterForm()">
-    <div id="headerMenu">
-        <img id="headerIcon" src="icon.png" onclick="location.href='index.html'" alt="Nasze logo">
-        <button id="headerHome" onclick="location.href='index.html'">Home</button>
+<body onload="ustawloginiregister()">
+    <div id="naglowek">
+        <img id="ikonawnaglowku" src="icon.png" onclick="location.href='index.html'" alt="Nasze logo">
         <div class="dropdown">
-            <button id="headerGames">Gry</button>
+            <button id="przyciskgry">Gry</button>
             <div class="dropdown-content">
-                <a href="reviewpage.html?data=mc_1.20" id="game1">Minecraft Update 1.20</a>
-                <a href="reviewpage.html?data=tloup1" id="game2">The Last Of Us Part I</a>
-                <a href="reviewpage.html?data=hogwartslegacy" id="game3">Hogwarts Legacy</a>
+                <a href="reviewpage.html?data=mc_1.20" id="gra1">Minecraft Update 1.19</a>
+                <a href="reviewpage.html?data=tloup1" id="gra2">The Last Of Us Part I</a>
+                <a href="reviewpage.html?data=hogwartslegacy" id="gra3">Hogwarts Legacy</a>
             </div>
         </div>
 
-        <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
-        <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj się</button>
-        <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
-        <button id="loggedUserInfo">Lorem ipsum aisldjsalkjdlksajd</button>
+        <button id="zarejestrujsienaglowek" onclick="location.href='login.html?type=login'">Zaloguj się</button>
+        <button id="zalogujsienaglowek" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
+        <button id="infouzalogowanym">Lorem ipsum aisldjsalkjdlksajd</button>
     </div>
-<div id="loginForm">
+<div id="oknologowania">
     <br>
-    <h1 id="loginTitle"></h1>
+    <h1 id="tytulokna"></h1>
     <input type="text" placeholder="Adres Email" id="loginBox">
     <br>
     <br>
     <input type="password" placeholder="Hasło" id="passwordBox">
     <br>
     <br>
-    <input type="password" placeholder="Powtórz Hasło" id="repeatPasswordBox">
+    <input type="password" placeholder="Powtórz Hasło" id="powtorzhaslobox">
     <br>
     <br>
     <br>
-    <a href="login.html?type=register" id="doUWantToRegister"></a>
+    <a href="login.html?type=register" id="czycheszsiearejestrowac"></a>
     <br>
-    <button id="loginConfirm" onclick="displayLoggedInAccountAfterButtonClicked()"></button>
+    <button id="potwierdzlogin" onclick="ustawdaneuzytkowikapozalogownaiu()"></button>
     <br>
     <br>
     <p>‎ </p>
