--- a/reviewpage.html
+++ b/reviewpage.html
@@ -2,33 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Coś poszło nie tak - Nie udało się załadować tytułu strony</title>
+    <title></title>
     <link rel="icon" href="icon.png">
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body onload="setReviewTextBasedOnSelectedGame()">
-    <div id="headerMenu">
-        <img id="headerIcon" src="icon.png" onclick="location.href='index.html'" alt="Nasze logo">
-        <button id="headerHome" onclick="location.href='index.html'">Home</button>
+<body onload="Zmiennazwegryitekstu()">
+    <div id="naglowek">
+        <img id="ikonawnaglowku" src="icon.png" onclick="location.href='index.html'" alt="Nasze logo">
         <div class="dropdown">
-            <button id="headerGames">Gry</button>
+            <button id="przyciskgry">Gry</button>
             <div class="dropdown-content">
-                <a href="reviewpage.html?data=mc_1.20" id="game1">Minecraft Update 1.20</a>
-                <a href="reviewpage.html?data=tloup1" id="game2">The Last Of Us Part I</a>
-                <a href="reviewpage.html?data=hogwartslegacy" id="game3">Hogwarts Legacy</a>
+                <a href="reviewpage.html?data=mc_1.20" id="gra1">Minecraft Update 1.19</a>
+                <a href="reviewpage.html?data=tloup1" id="gra2">The Last Of Us Part I</a>
+                <a href="reviewpage.html?data=hogwartslegacy" id="gra3">Hogwarts Legacy</a>
             </div>
         </div>
 
-        <button id="headerContacts" onclick="location.href='contacts.html'">Kontakt</button>
-        <button id="headerRegister" onclick="location.href='login.html?type=login'">Zaloguj się</button>
-        <button id="headerLogin" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
-        <button id="loggedUserInfo">Lorem ipsum aisldjsalkjdlksajd</button>
+        <button id="zarejestrujsienaglowek" onclick="location.href='login.html?type=login'">Zaloguj się</button>
+        <button id="zalogujsienaglowek" onclick="location.href='login.html?type=register'">Zarejestruj się</button>
+        <button id="infouzalogowanym">Lorem ipsum aisldjsalkjdlksajd</button>
     </div>
-    <div id="reviewPane">
-        <h1 id="gameReviewTitle"></h1>
-        <img src="" alt="Zdjęcie Gry" id="gameImage">
-        <p id="reviewText"></p>
+    <div id="opinia">
+        <h1 id="tytulopinii"></h1>
+        <img src="" alt="Zdjęcie Gry" id="zdjeciegry">
+        <p id="tekstopinii"></p>
         <br>
         <p>‎ </p>
     </div>
